--- a/README.adoc
+++ b/README.adoc
@@ -15,14 +15,34 @@ conda activate ./.conda
 cmake -G Ninja -DCMAKE_MAKE_PROGRAM=ninja -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_BUILD_TYPE=Release -S ./ -B ./build
 ....
 
+=== Windows
+
+....
+cmake -A x64 -DCMAKE_BUILD_TYPE=Release -DVCPKG_TARGET_TRIPLET=x64-windows -S ./ -B ./build
+....
+
 == Build
 
 ....
 cmake --build ./build
 ....
 
+=== Windows
+
+....
+cmake --build ./build --config Release
+....
+
 == Run
 
 ....
-./build/MainRs
+cd build
+./main-rs
+....
+
+=== Windows
+
+....
+cd build/Release
+../main-rs.exe
 ....
