--- a/README.adoc
+++ b/README.adoc
@@ -9,6 +9,18 @@ conda env create --prefix ./.conda -f environment.yml
 conda activate ./.conda
 ....
 
+=== Codespaces
+
+....
+apt update
+apt install cargo clang cmake curl git ninja-build pkg-config rustc tar unzip wget zip
+git submodule update --init --recursive
+mkdir -p ~/miniconda3
+wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda3/miniconda.sh
+bash ~/miniconda3/miniconda.sh -b -u -p ~/miniconda3
+rm -rf ~/miniconda3/miniconda.sh
+....
+
 == Configure
 
 ....
